--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 </head>
 
 <body>
-    <header><img class="img-fluid" src="/assets/img/20220905_204609_00001.png" style="padding-left: 0px;min-width: auto;min-height: auto;margin-left: 15px;margin-top: 15px;max-width: 25%;" width="130" height="130">
+    <header><a href="/index.html"><img class="img-fluid" src="/assets/img/20220905_204609_00001.png" style="padding-left: 0px;min-width: auto;min-height: auto;margin-left: 15px;margin-top: 15px;max-width: 25%;" width="130" height="130" alt="RBPS logo"></a>
         <h1 class="text-center" style="color: rgb(255,70,70);font-family: Aladin, serif;padding-top: 9px;font-size: 55px;">Rose Bud Public School</h1>
         <h4 style="text-align: center;color: rgb(0,0,0);padding-top: 0px;margin-top: -15px;font-family: 'Alegreya SC', serif;font-size: 28px;">Nurturing The Future</h4>
         <nav class="navbar navbar-light navbar-expand-md py-3">
@@ -131,46 +131,42 @@
                 </div>
             </div>
         </nav><div><hr style="margin-bottom:-8px;"></div><div><hr></div>
-    </header><img src="/assets/img/contactus%20(2).jpeg" style="width: 100%;padding-right: 20%;padding-left: 20%;">
-    <div class="container">
+    </header><img src="/assets/img/contactus%20(2).jpeg" style="width: 100%;padding-right: 15%;padding-left: 15%;margin-bottom: 30px;">
+    <div class="container" style="padding-right: 10%;padding-left: 10%;">
         <div class="row">
-            <div class="col-md-6 col-xl-3" style="margin-top: 90px;border-radius: 30px;border-width: 3px;border-style: solid;margin-left: 20%;background: #fff4b9;">
+            <div class="col-md-6 col-xl-4 offset-xl-1" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Help Desk:</span></h2>
                 <p style="color: rgb(0,0,0);margin-top: 30px;text-align: center;">Email: <a href="mailto:helpdesk@rbpschool.in" target="_blank">helpdesk@rbpschool.in</a><br><br>Contact No: 011-22458762<br></p>
             </div>
-            <div class="col-md-6 col-xl-3" style="margin-top: 90px;border-radius: 30px;border-width: 3px;border-style: solid;margin-left: 10%;background: #fff4b9;">
+            <div class="col-md-6 col-xl-4 offset-xl-2" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Principal</span>:</h2>
                 <p style="margin-top: 30px;text-align: center;">Email: <a href="mailto:principal@rbpschool.in" target="_blank">principal@rbpschool.in</a><br><br>Contact No: 011-22458765<br></p>
             </div>
         </div>
-    </div>
-    <div class="container">
         <div class="row">
-            <div class="col-md-6 col-xl-3" style="margin-top: 40px;border-width: 3px;border-style: solid;border-radius: 30px;margin-left: 20%;background: #fff4b9;">
+            <div class="col-xl-4 offset-xl-1" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Finance</span>:</h2>
                 <p style="margin-top: 30px;text-align: center;">Email: <a href="mailto:finance@rbpschool.in" target="_blank">finance@rbpschool.in</a><br><br>Contact No: 011-22458763<br></p>
             </div>
-            <div class="col-md-6 col-xl-3" style="margin-top: 40px;border-radius: 30px;border-width: 3px;border-style: solid;margin-left: 10%;background: #fff4b9;">
+            <div class="col-xl-4 offset-xl-2" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Transport</span>:</h2>
                 <p style="margin-top: 30px;text-align: center;">Email: <a href="mailto:transport@rbpschool.in" target="_blank">transport@rbpschool.in</a><br><br>Contact No: 011-22458764<br></p>
             </div>
         </div>
-    </div>
-    <div class="container">
         <div class="row">
-            <div class="col-md-6 col-xl-3" style="margin-top: 40px;margin-bottom: 50px;border-radius: 30px;border-width: 3px;border-style: solid;margin-left: 20%;background: #fff4b9;">
+            <div class="col-xl-4 offset-xl-1" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Book Store</span>:</h2>
                 <p style="margin-top: 30px;text-align: center;">Email: <a href="mailto:bookstore@rbpschool.in" target="_blank">bookstore@rbpschool.in</a><br><br>Contact No: 011-22458766<br></p>
             </div>
-            <div class="col-md-6 col-xl-3" style="margin-top: 40px;margin-bottom: 50px;border-radius: 30px;border-width: 3px;border-style: solid;margin-left: 10%;background: #fff4b9;">
+            <div class="col-xl-4 offset-xl-2" style="margin-top: 40px;background: #fff4b9;border-width: 3px;border-style: solid;border-radius: 30px;">
                 <h2 style="text-align: center;"><span style="text-decoration: underline;">Uniform Store</span>:</h2>
                 <p class="text-center" style="margin-top: 30px;">Email: <a href="mailto:uniformstore@rbpschool.in" target="_blank">uniformstore@rbpschool.in</a><br><br>Contact No: 011-22458767<br></p>
             </div>
         </div>
     </div>
-    <div class="container" style="margin-bottom: 30px;">
-        <div class="row row-custom">
-            <div class="col-10 col-sm-6 col-md-4 offset-1 offset-sm-3 offset-md-4" style="width: 60%;margin-left: 20%;margin-right: 20%;margin-bottom: 100px;border-style: solid;border-radius: 6px;padding: 30px;">
+    <div class="container" style="margin-bottom: 30px;margin-top: 30px;">
+        <div class="row row-custom" style="padding-right: 10%;padding-bottom: 100px;padding-left: 10%;">
+            <div class="col-10 col-sm-6 col-md-4 col-xl-12 offset-1 offset-sm-3 offset-md-4 offset-xl-0" style="border-style: solid;border-radius: 6px;padding: 30px;">
                 <h1 class="text-center">Feedback </h1>
                 <div>
                     <div class="card-body">
