--- a/rbps instructional process.html
+++ b/rbps instructional process.html
@@ -106,7 +106,7 @@
 </head>
 
 <body>
-    <header><img class="img-fluid" src="/assets/img/20220905_204609_00001.png" style="padding-left: 0px;min-width: auto;min-height: auto;margin-left: 15px;margin-top: 15px;max-width: 25%;" width="130" height="130">
+    <header><a href="/index.html"><img class="img-fluid" src="/assets/img/20220905_204609_00001.png" style="padding-left: 0px;min-width: auto;min-height: auto;margin-left: 15px;margin-top: 15px;max-width: 25%;" width="130" height="130" alt="RBPS logo"></a>
         <h1 class="text-center" style="color: rgb(255,70,70);font-family: Aladin, serif;padding-top: 9px;font-size: 55px;">Rose Bud Public School</h1>
         <h4 style="text-align: center;color: rgb(0,0,0);padding-top: 0px;margin-top: -15px;font-family: 'Alegreya SC', serif;font-size: 28px;">Nurturing The Future</h4>
         <nav class="navbar navbar-light navbar-expand-md py-3">
