rbps website changes

--- a/junior.html
+++ b/junior.html
@@ -133,37 +133,97 @@
         </nav><div><hr style="margin-bottom:-8px;"></div><div><hr></div>
     </header>
     <h1 class="text-center" style="margin-top: 40px;margin-bottom: 60px;">JUNIOR WING</h1>
-    <div class="container">
-        <div class="row" style="padding-right: 10%;padding-left: 10%;">
-            <div class="col-md-12" style="border-radius: 10px;padding-bottom: 40px;padding-top: 20px;margin-top: 20px;margin-bottom: 40px;padding-right: 20%;padding-left: 20%;border-style: none;">
-                <h2 style="text-align: center;color: rgb(3,140,0);">Play Group</h2><div><hr style="border-top: 5px double #8c8b8b; width:100%"></div><span class="text-nowrap" style="font-size: 25px;"><strong>Section</strong></span><span class="text-nowrap" style="font-size: 25px;margin-left: 65%;"><strong>Teacher</strong></span>
-                <p>&nbsp;</p><span class="text-nowrap">PG-A</span><span class="text-nowrap" style="margin-left: 72%;">Ms. Parul Singh</span>
-                <p>&nbsp;</p><span class="text-nowrap">PG-B</span><span class="text-nowrap" style="margin-left: 72%;">Ms. Reena Jha</span>
-                <p>&nbsp;</p><span class="text-nowrap">PG-C</span><span class="text-nowrap" style="margin-left: 72%;">Ms. Anam Khan</span>
-                <p>&nbsp;</p><span class="text-nowrap">PG-D</span><span class="text-nowrap" style="margin-left: 72%;">Ms. Reetu Raj</span>
-            </div>
+    <div style="margin-bottom: 60px;">
+        <h2 class="text-center" style="color: rgb(3,140,0);padding-right: 20%;padding-left: 20%;">Play Group<div><hr style="border-top: 10px double black; width:100%"></div></h2>
+        <div class="table-responsive" style="padding-right: 10%;padding-left: 10%;">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Section</th>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Teacher</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">PG-A</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Parul Singh<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">PG-B</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Reena Jha<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">PG-C</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Anam Khan<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">PG-D</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Reetu Raj<br></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div><div><hr style="border-top: 10px double black; width:100%"></div>
-    <div class="container">
-        <div class="row" style="padding-right: 10%;padding-left: 10%;">
-            <div class="col-md-12" style="margin-top: 20px;margin-bottom: 40px;border-radius: 10px;padding-top: 20px;padding-bottom: 40px;padding-right: 20%;padding-left: 20%;border-style: none;">
-                <h2 style="text-align: center;color: rgb(3,140,0);">Nursery</h2><div><hr style="border-top: 5px double #8c8b8b; width:100%"></div><span class="text-nowrap" style="font-size: 25px;"><strong>Section</strong></span><span class="text-nowrap" style="margin-left: 65%;font-size: 25px;"><strong>Teacher</strong></span>
-                <p>&nbsp;</p><span class="text-nowrap">Nur-A</span><span class="text-nowrap" style="margin-left: 68%;">Ms. Manshi Kapoor</span>
-                <p>&nbsp;</p><span class="text-nowrap">Nur-B</span><span class="text-nowrap" style="margin-left: 68%;">Ms. Nitika Malhotra</span>
-                <p>&nbsp;</p><span class="text-nowrap">Nur-C</span><span class="text-nowrap" style="margin-left: 68%;">Ms. Khushboo Ansari</span>
-                <p>&nbsp;</p><span class="text-nowrap">Nur-D</span><span class="text-nowrap" style="margin-left: 68%;">Ms. Mishika Arora</span>
-            </div>
+    </div>
+    <div style="margin-bottom: 60px;">
+        <h2 class="text-center" style="color: rgb(3,140,0);padding-right: 20%;padding-left: 20%;">Nursery<div><hr style="border-top: 10px double black; width:100%"></div></h2>
+        <div class="table-responsive" style="padding-right: 10%;padding-left: 10%;">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Section</th>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Teacher</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Nur-A</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Manshi Kapoor<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Nur-B</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Nitika Malhotra<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">Nur-C</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Khushboo Ansari<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">Nur-D</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Mishika Arora<br></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div><div><hr style="border-top: 10px double black; width:100%"></div>
-    <div class="container" style="margin-bottom: 80px;">
-        <div class="row" style="padding-right: 10%;padding-left: 10%;">
-            <div class="col-md-12" style="margin-top: 20px;margin-bottom: 40px;padding-top: 20px;padding-bottom: 40px;border-radius: 10px;padding-right: 20%;padding-left: 20%;border-style: none;">
-                <h2 style="text-align: center;color: rgb(3,140,0);">KG</h2><div><hr style="border-top: 5px double #8c8b8b; width:100%"></div><span class="text-nowrap" style="font-size: 25px;"><strong>Section</strong></span><span class="text-nowrap" style="margin-left: 65%;font-size: 25px;"><strong>Teacher</strong></span>
-                <p>&nbsp;</p><span class="text-nowrap">KG-A</span><span class="text-nowrap" style="margin-left: 70%;">Ms. Kashan Khan</span>
-                <p>&nbsp;</p><span class="text-nowrap">KG-B</span><span class="text-nowrap" style="margin-left: 70%;">Ms. Nitika Singh</span>
-                <p>&nbsp;</p><span class="text-nowrap">KG-C</span><span class="text-nowrap" style="margin-left: 70%;">Ms. Surbhi Gupta</span>
-                <p>&nbsp;</p><span class="text-nowrap">KG-D</span><span class="text-nowrap" style="margin-left: 70%;">Ms. Poonam Arya</span>
-            </div>
+    </div>
+    <div style="margin-bottom: 100px;">
+        <h2 class="text-center" style="color: rgb(3,140,0);padding-right: 20%;padding-left: 20%;">KG<div><hr style="border-top: 10px double black; width:100%"></div></h2>
+        <div class="table-responsive" style="padding-right: 10%;padding-left: 10%;">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Section</th>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Teacher</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">KG-A</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Kashan Khan<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">KG-B</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Nitika Singh<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">KG-C</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Surbhi Gupta<br></td>
+                    </tr>
+                    <tr>
+                        <td class="text-center" style="padding-top: 35px;">KG-D</td>
+                        <td class="text-center" style="padding-top: 35px;">Ms. Poonam Arya<br></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <footer style="background: #cccccc;">
