--- a/senior secondary.html
+++ b/senior secondary.html
@@ -133,24 +133,58 @@
         </nav><div><hr style="margin-bottom:-8px;"></div><div><hr></div>
     </header>
     <h1 class="text-center" style="margin-top: 40px;margin-bottom: 60px;">SENIOR SENCONDARY WING</h1>
-    <div class="container">
-        <div class="row" style="padding-right: 10%;padding-left: 10%;">
-            <div class="col-md-12" style="border-radius: 10px;padding-bottom: 40px;padding-top: 20px;margin-top: 20px;margin-bottom: 40px;padding-right: 20%;padding-left: 20%;border-style: none;">
-                <h2 style="text-align: center;color: rgb(3,140,0);">Class +1</h2><div><hr style="border-top: 5px double #8c8b8b; width:100%"></div><span class="text-nowrap" style="font-size: 25px;"><strong>Section</strong></span><span class="text-nowrap" style="font-size: 25px;margin-left: 65%;"><strong>Teacher</strong></span>
-                <p>&nbsp;</p><span class="text-nowrap">Science</span><span class="text-nowrap" style="margin-left: 70%;">Mr. Arif Siddiqui</span>
-                <p>&nbsp;</p><span class="text-nowrap">Commerce</span><span class="text-nowrap" style="margin-left: 66%;">Mr. Parvez Alam</span>
-                <p>&nbsp;</p><span class="text-nowrap">Art</span><span class="text-nowrap" style="margin-left: 75%;">Ms. Farhat Begum</span>
-            </div>
+    <div style="margin-bottom: 60px;">
+        <h2 class="text-center" style="color: rgb(3,140,0);padding-right: 20%;padding-left: 20%;">Class +1<div><hr style="border-top: 10px double black; width:100%"></div></h2>
+        <div class="table-responsive" style="padding-right: 10%;padding-left: 10%;">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Section</th>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Teacher</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Science</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Mr. Arif Siddiqui<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Commerce</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Mr. Parvez Alam<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;padding-top: 35px;">Art</td>
+                        <td style="text-align: center;padding-top: 35px;">Ms. Farhat Begum<br></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </div><div><hr style="border-top: 10px double black; width:100%"></div>
-    <div class="container" style="margin-bottom: 80px;">
-        <div class="row" style="padding-right: 10%;padding-left: 10%;">
-            <div class="col-md-12" style="margin-top: 20px;margin-bottom: 40px;border-radius: 10px;padding-top: 20px;padding-bottom: 40px;padding-right: 20%;padding-left: 20%;border-style: none;">
-                <h2 style="text-align: center;color: rgb(3,140,0);">Class +2</h2><div><hr style="border-top: 5px double #8c8b8b; width:100%"></div><span class="text-nowrap" style="font-size: 25px;"><strong>Section</strong></span><span class="text-nowrap" style="margin-left: 65%;font-size: 25px;"><strong>Teacher</strong></span>
-                <p>&nbsp;</p><span class="text-nowrap">Science</span><span class="text-nowrap" style="margin-left: 65%;">Ms. Monika Malhotra</span>
-                <p>&nbsp;</p><span class="text-nowrap">Commerce</span><span class="text-nowrap" style="margin-left: 67%;">Ms. Nidhi Roy</span>
-                <p>&nbsp;</p><span class="text-nowrap">Art</span><span class="text-nowrap" style="margin-left: 74%;">Mr. Dheeraj Singh</span>
-            </div>
+    </div>
+    <div style="margin-bottom: 100px;">
+        <h2 class="text-center" style="color: rgb(3,140,0);padding-right: 20%;padding-left: 20%;">Class +2<div><hr style="border-top: 10px double black; width:100%"></div></h2>
+        <div class="table-responsive" style="padding-right: 10%;padding-left: 10%;">
+            <table class="table table-borderless">
+                <thead>
+                    <tr>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Section</th>
+                        <th style="font-size: 25px;text-align: center;border-style: none;padding-top: 35px;">Teacher</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Science</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Monika Malhotra<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Commerce</td>
+                        <td style="text-align: center;border-style: none;padding-top: 35px;">Ms. Nidhi Roy<br></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;padding-top: 35px;">Art</td>
+                        <td style="text-align: center;padding-top: 35px;">Mr. Dheeraj Singh<br></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     <footer style="background: #cccccc;">
