--- a/educational_resources.html
+++ b/educational_resources.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/icons8-rupee-cute-outline-favicons/Web/icons8-rupee-cute-outline-96.png" type="image/x-icon">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/educational_resources_style.css">
     <script src="javascript/nav_top_sript.js"></script>
     <script>
         window.onload = function(){nav_top_toggle()};
@@ -45,7 +46,92 @@
         </div>
     </header>
     <section class="section">
-        
+        <div class="s-div1">
+            <div class="s-div2">
+                <img src="images/OER.png" alt="" class="s-img1">
+                <p class="s-p1">Business Loan</p>
+                <hr class="s-hr1">
+                <p class="s-p2">Business loan is a credit facility offered by Banks/NBFCs and various other financial institutions to meet the funding requirements of individuals, self-employed customers, business owners, MSMEs, and other business entities. Business Loan can be availed by startups, entrepreneurs, retailers, traders, manufacturers, self-employed professionals (CAs/Doctors), existing businesses, and several other business entities.</p>
+                <p class="s-p2">Business loan is majorly classified into two types, such as Secured loan and Unsecured loan. Secured loans are types of loans that require collateral/security, that borrowers need to deposit with the lender to avail funds. However, in the case of unsecured loans, there is no need to submit any type of collateral/security with the Bank/NBFC, or any other financial institution.</p>
+                <p class="s-p2">Banks/NBFCs offer a range of both Secured and Unsecured Business Loans that include Term Loans (Short-term/Intermediate-term/Long-term), Working Capital Loans, Cash Credit, Overdraft, Letter of Credit, Bill/Invoice Discounting, Equipment Finance, Machinery Loans, Point-of-Sale (POS) Loans/Merchant Cash Advance, Fleet Finance, Loans under Bank Guarantee (BG), and Loans under Govt. schemes, such as Mudra Loans (PMMY), SIDBI, PMEGP, CGTMSE, Stand Up India, PSB Loans in 59 minutes, PMRY, etc. Financial institutions also offer Startup Loans, Small Business Loans, Instant Business Loan and Micro Loans of loan amount up to Rs. 10 lakh or more depending upon business requirements.</p>
+                <br>
+                <a href=""><p class="s-p5">Related Content</pcl></a>
+            </div>
+            <div class="s-div6">
+                <div class="s-div3">
+                    <p class="s-p3">Business Loan By bank</p>
+                    <hr class="s-hr2" align="left">
+                    <div class="s-div5">
+                        <a href="https://sbi.co.in/web/business/sme/sme-loans/simplified-small-business-loan" target="_blank">
+                            <p class="s-p4">SBI Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.axisbank.com/retail/loans/business-loan/solutions-for-business" target="_blank">
+                            <p class="s-p4">AXIS Bank Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.icicibank.com/business-banking/finance" target="_blank">
+                            <p class="s-p4">ICICI Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.bajajfinserv.in/business-loan" target="_blank">
+                            <p class="s-p4">Bajaj Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.hdfcbank.com/personal/borrow/popular-loans/business-loan" target="_blank">
+                            <p class="s-p4">HDFC Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="index.html" target="_blank">
+                            <p class="s-p4">BorrowEase Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.idbibank.in/msme-finance.aspx" target="_blank">
+                            <p class="s-p4">IDBI Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.pnbindia.in/corporate-loans.html" target="_blank">
+                            <p class="s-p4">PNB Business Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                    </div>
+                </div>
+                <div class="s-div4">
+                    <p class="s-p3">Business Loan Details</p>
+                    <hr class="s-hr2" align="left">
+                    <div class="s-div5">
+                        <a href="https://www.creditmantri.com/small-business-loans/" target="_blank">
+                            <p class="s-p4">Business Loan Eligibility</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.bankofbaroda.in/business-banking/msme-banking/loans-and-advances/baroda-sme-loan-pack-business-loans" target="_blank">
+                            <p class="s-p4">SME Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="government_schemes.html" target="_blank">
+                            <p class="s-p4">MSME Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.unionbankofindia.co.in/english/cgtmse.aspx" target="_blank">
+                            <p class="s-p4">CGTMSE scheme</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://punjabandsindbank.co.in/content/psbpersonal-loan" target="_blank">
+                            <p class="s-p4">PSB Loans in 59 Minutes</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://corporatefinanceinstitute.com/resources/commercial-lending/working-capital-loan/" target="_blank">
+                            <p class="s-p4">Working Capital Loan</p>
+                        </a>
+                        <hr class="s-hr3">
+                        <a href="https://www.go-yubi.com/blog/government-business-loans-for-women-startup-in-india/" target="_blank">
+                            <p class="s-p4">Business Loans for Women</p>
+                        </a>
+                        <hr class="s-hr3">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="f-div7">
@@ -62,19 +148,24 @@
                 </div>
                 <div class="f-div3">
                     <div class="f-div5">
-                        <span>Loan Calculator</span>
+                        <a href="loan_calculator.html">
+                            <span>Loan Calculator</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Government Schemes</span>
+                        <a href="government_schemes.html">
+                            <span>Government Schemes</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Educational Resources</span>
+                        <a href="educational_resources.html">
+                            <span>Educational Resources</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Contact Us</span>
-                    </div>
-                    <div class="f-div5">
-                        <span>About Us</span>
+                        <a href="about_us.html">
+                            <span>About Us</span>
+                        </a>
                     </div>
                 </div>
                 <div class="f-div4">
@@ -85,7 +176,7 @@
                 <hr class="f-hr2">
                 <div class="f-div6">
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/people/Borrowease-Loan/pfbid0P3siZve2SCkwJBMbNZmRFrMt2p6HgeY3oHnoXArpzD8KXCMrPh3HBUGsJXcUWkc7l/" target="_blank">
                             <img src="images/icons8-facebook-ios-16-glyph/icons8-facebook-30.png" alt="" class="f-img2">
                         </a>
                     </span>
@@ -95,7 +186,7 @@
                         </a>
                     </span>
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://twitter.com/borrowease" target="_blank">
                             <img src="images/icons8-twitter-ios-16-filled/icons8-twitter-50.png" alt="" class="f-img2">
                         </a>
                     </span>
