--- a/index.html
+++ b/index.html
@@ -206,19 +206,24 @@
                 </div>
                 <div class="f-div3">
                     <div class="f-div5">
-                        <span>Loan Calculator</span>
+                        <a href="loan_calculator.html">
+                            <span>Loan Calculator</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Government Schemes</span>
+                        <a href="government_schemes.html">
+                            <span>Government Schemes</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Educational Resources</span>
+                        <a href="educational_resources.html">
+                            <span>Educational Resources</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Contact Us</span>
-                    </div>
-                    <div class="f-div5">
-                        <span>About Us</span>
+                        <a href="about_us.html">
+                            <span>About Us</span>
+                        </a>
                     </div>
                 </div>
                 <div class="f-div4">
@@ -229,7 +234,7 @@
                 <hr class="f-hr2">
                 <div class="f-div6">
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/people/Borrowease-Loan/pfbid0P3siZve2SCkwJBMbNZmRFrMt2p6HgeY3oHnoXArpzD8KXCMrPh3HBUGsJXcUWkc7l/" target="_blank">
                             <img src="images/icons8-facebook-ios-16-glyph/icons8-facebook-30.png" alt="" class="f-img2">
                         </a>
                     </span>
@@ -239,7 +244,7 @@
                         </a>
                     </span>
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://twitter.com/borrowease" target="_blank">
                             <img src="images/icons8-twitter-ios-16-filled/icons8-twitter-50.png" alt="" class="f-img2">
                         </a>
                     </span>
