--- a/about_us.html
+++ b/about_us.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Calculator</title>
+    <title>About Us</title>
     <link rel="shortcut icon" href="images/icons8-rupee-cute-outline-favicons/Web/icons8-rupee-cute-outline-96.png" type="image/x-icon">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/loan_calculator_style.css">
+    <link rel="stylesheet" href="css/about_us_style.css">
     <script src="javascript/nav_top_sript.js"></script>
-    <script src="javascript/loan_calculator_script.js"></script>
     <script>
         window.onload = function(){nav_top_toggle()};
         window.onscroll = function(){nav_top_toggle()};
@@ -47,58 +46,14 @@
         </div>
     </header>
     <section class="section">
-        <div class="s-div5">
-            <p class="s-p4">User Instruction</p>
-            <p class="s-p5">&bull; Enter the loan amount you wish to borrow in INR (Indian Rupees) in the "<span class="s-span1">Loan Amount</span>" field.</p>
-            <p class="s-p5">&bull; Set the interest rate percentage using the range slider or by manually entering the value in the "<span class="s-span1">Interest Rate</span>" field.</p>
-            <p class="s-p5">&bull; Set the loan term in years using the range slider or by manually entering the value in the "<span class="s-span1">Loan Term</span>" field.</p>
-            <p class="s-p5">&bull; Select the payment frequency from the dropdown list provided.</p>
-            <p class="s-p5">&bull; Click on the "<span class="s-span1">Calculate</span>" button to see the loan summary.</p>
-            <p class="s-p5">&bull; The loan summary will display the payment frequency, number of payments, loan amount, and monthly payment details.</p>
-            <p class="s-p5"><span class="s-span1">Note</span>: The user can adjust the loan amount, interest rate, loan term, and payment frequency as many times as they want before clicking the "<span class="s-span1">Calculate</span>" button to get the updated loan summary.</p>
-        </div>
         <div class="s-div1">
-            <p class="s-p1">Loan Calculator</p>
-            <form onsubmit="event.preventDefault(); calculateLoan();" id="">
-                <div class="s-div2">
-                    <label class="s-label1">Loan Amount (INR):</label>
-                    <input type="number" id="loanAmount" placeholder="Enter loan amount(₹)" class="s-input1">
-                </div>
-                <div class="s-div2">
-                    <label class="s-label1">Interest Rate (%):</label>
-                    <input type="range" min="0.1" max="20" step="0.1" id="interestRate" class="s-input3" placeholder="Enter interest rate" oninput="document.getElementById('interestRateValue').value = this.value; document.getElementById('interestRate').value = this.value;">
-                    <input type="number" id="interestRateValue" class="s-input2" max="20" placeholder="Enter interest rate(%)" oninput="document.getElementById('interestRate').value = this.value;" onchange="if(this.value > 20) {this.value = 20;}">
-                </div>
-                <div class="s-div2">
-                    <label class="s-label1">Loan Term (Years):</label>
-                    <input type="range" min="1" max="30" step="1" id="loanTermSlider" class="s-input3" placeholder="Enter loan term in years" oninput="document.getElementById('loanTerm').value = this.value; document.getElementById('loanTermSliderValue').value = this.value;">
-                    <input type="number" id="loanTerm" class="s-input2" max="30" oninput="document.getElementById('loanTermSlider').value = this.value;" onchange="if(this.value > 30) {this.value = 30;} else if(this.value < 1) {this.value = 1;} document.getElementById('loanTermSlider').value = this.value;">
-                </div>
-                <div class="s-div2">
-                    <label class="s-label1">Payment Frequency:</label>
-                    <select id="paymentFrequency" class="s-input1">
-                        <option value="1">Annually</option>
-                        <option value="2">Semi-Annually</option>
-                        <option value="4">Quarterly</option>
-                        <option value="12" selected>Monthly</option>
-                        <option value="24">Semi-Monthly</option>
-                        <option value="26">Biweekly</option>
-                        <option value="52">Weekly</option>
-                        <option value="365">Daily</option>
-                    </select>
-                </div>
-                <div class="s-div3">
-                    <button type="submit" onclick="calculateLoan(); summary_visible();" class="s-btn1">Calculate</button>
-                </div>
-            </form>
-            <div class="s-div4" id="summary">
-              <p class="s-p3">Loan Summary:</p>
-              <p class="s-p2">Payment Frequency: <span id="paymentFrequencyResult"></span></p>
-              <p class="s-p2">Number of Payments: <span id="numberOfPayments"></span></p>
-              <p class="s-p2">Loan Payment: <span id="loanPayment"></span></p>
-              <p class="s-p2">Total Interest Paid: <span id="totalInterestPaid"></span></p>
-              <p class="s-p2">Total Payment: <span id="totalPayment"></span></p>
-            </div>
+            <h2>Welcome to BorrowEase</h2>
+            <p>An online platform aimed at providing MSMEs with easy and hassle-free access to credit.</p>
+            <p>At BorrowEase, our team of passionate developers and designers have come together to build a lending platform that simplifies the process of accessing credit for small businesses. Our project is designed to help MSMEs overcome the challenges of getting a loan, such as complicated application processes, long wait times, and high interest rates.</p>
+            <p>Our goal is to create a platform that is easy to use, quick to access, and transparent in its operations. We understand that MSMEs are the backbone of the Indian economy, and we believe that by helping them access the credit they need, we can contribute to the growth and development of the country.</p>
+            <p>Our platform leverages the latest technologies to provide MSMEs with personalized loan options tailored to their specific needs. We also believe in the importance of transparency, and we provide our customers with clear and concise information about their loan options, including interest rates, repayment terms, and any additional fees.</p>
+            <p>We are excited about the potential of our project and the impact it could have on the MSME sector in India. We believe that access to credit is a right, not a privilege, and we are committed to making it available to as many small businesses as possible.</p>
+            <p>Thank you for considering BorrowEase as your lending partner. We are thrilled to have the opportunity to showcase our hackathon project and contribute to the growth of the MSME sector in India.</p>
         </div>
     </section>
     <footer class="footer">
