--- a/login.html
+++ b/login.html
@@ -48,6 +48,14 @@
         </div>
     </header>
     <section class="section">
+        <div class="s-div3">
+            <p class="s-p3">User Instruction</p>
+            <p class="s-p4">&bull; Enter your username: Type in your username into the "<span class="s-span1">Username</span>" field. Your username should be provided by the website or application that you are trying to login to.</p>
+            <p class="s-p4">&bull; Enter your password: Type in your password into the "<span class="s-span1">Password</span>" field. Your password should be kept confidential and known only to you.</p>
+            <p class="s-p4">&bull; Show Password (Optional): If you would like to view the characters you are typing in the password field, you can check the "<span class="s-span1">Show Password</span>" box. This is helpful if you need to verify that you are typing the correct password.</p>
+            <p class="s-p4">&bull; Click on the "Login" button: Once you have entered your username and password, click on the "<span class="s-span1">Login</span>" button to submit your login credentials and gain access to the website or application.</p>
+            <p class="s-p4">&bull; Sign up for an account (Optional): If you do not have an account, click on the "<span class="s-span1">Signup</span>" link located below the login form to be redirected to the sign up page.</p>
+        </div>
         <div class="s-div1">
             <form method="post" action="">
 			    <p class="s-p1">Login</p>
@@ -84,19 +92,24 @@
                 </div>
                 <div class="f-div3">
                     <div class="f-div5">
-                        <span>Loan Calculator</span>
+                        <a href="loan_calculator.html">
+                            <span>Loan Calculator</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Government Schemes</span>
+                        <a href="government_schemes.html">
+                            <span>Government Schemes</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Educational Resources</span>
+                        <a href="educational_resources.html">
+                            <span>Educational Resources</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Contact Us</span>
-                    </div>
-                    <div class="f-div5">
-                        <span>About Us</span>
+                        <a href="about_us.html">
+                            <span>About Us</span>
+                        </a>
                     </div>
                 </div>
                 <div class="f-div4">
@@ -107,7 +120,7 @@
                 <hr class="f-hr2">
                 <div class="f-div6">
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/people/Borrowease-Loan/pfbid0P3siZve2SCkwJBMbNZmRFrMt2p6HgeY3oHnoXArpzD8KXCMrPh3HBUGsJXcUWkc7l/" target="_blank">
                             <img src="images/icons8-facebook-ios-16-glyph/icons8-facebook-30.png" alt="" class="f-img2">
                         </a>
                     </span>
@@ -117,7 +130,7 @@
                         </a>
                     </span>
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://twitter.com/borrowease" target="_blank">
                             <img src="images/icons8-twitter-ios-16-filled/icons8-twitter-50.png" alt="" class="f-img2">
                         </a>
                     </span>
