--- a/signup.html
+++ b/signup.html
@@ -48,6 +48,15 @@
         </div>
     </header>
     <section class="section">
+        <div class="s-div3">
+            <p class="s-p3">User Instructions</p>
+            <p class="s-p4">&bull; To create a new account, enter your email address, username, and a strong password in the appropriate fields.</p>
+            <p class="s-p4">&bull; Make sure to enter a valid email address that you have access to, as this will be used to verify your account and recover your password if needed.</p>
+            <p class="s-p4">&bull; Retype your password in the "<span class="s-span1">Confirm Password</span>" field to make sure you've entered it correctly.</p>
+            <p class="s-p4">&bull; If you want to see the password you are typing, click the "<span class="s-span1">Show Password</span>" checkbox. This will display the password in plain text.</p>
+            <p class="s-p4">&bull; After completing the form, click the "<span class="s-span1">Signup</span>" button to submit your information and create your account.</p>
+            <p class="s-p4">&bull; If you already have an account, click the "<span class="s-span1">Login</span>" link to go to the login page and enter your credentials to access your account.</p>
+        </div>
         <div class="s-div1">
             <form method="post" action="">
                 <p class="s-p1">Signup</p>
@@ -92,19 +101,24 @@
                 </div>
                 <div class="f-div3">
                     <div class="f-div5">
-                        <span>Loan Calculator</span>
+                        <a href="loan_calculator.html">
+                            <span>Loan Calculator</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Government Schemes</span>
+                        <a href="government_schemes.html">
+                            <span>Government Schemes</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Educational Resources</span>
+                        <a href="educational_resources.html">
+                            <span>Educational Resources</span>
+                        </a>
                     </div>
                     <div class="f-div5">
-                        <span>Contact Us</span>
-                    </div>
-                    <div class="f-div5">
-                        <span>About Us</span>
+                        <a href="about_us.html">
+                            <span>About Us</span>
+                        </a>
                     </div>
                 </div>
                 <div class="f-div4">
@@ -115,7 +129,7 @@
                 <hr class="f-hr2">
                 <div class="f-div6">
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/people/Borrowease-Loan/pfbid0P3siZve2SCkwJBMbNZmRFrMt2p6HgeY3oHnoXArpzD8KXCMrPh3HBUGsJXcUWkc7l/" target="_blank">
                             <img src="images/icons8-facebook-ios-16-glyph/icons8-facebook-30.png" alt="" class="f-img2">
                         </a>
                     </span>
@@ -125,7 +139,7 @@
                         </a>
                     </span>
                     <span class="f-span3">
-                        <a href="" target="_blank">
+                        <a href="https://twitter.com/borrowease" target="_blank">
                             <img src="images/icons8-twitter-ios-16-filled/icons8-twitter-50.png" alt="" class="f-img2">
                         </a>
                     </span>
